--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -17,7 +17,7 @@ def capacitor_pods
   pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
 end
 
-target 'App' do
+target 'Range Companion' do
   capacitor_pods
   # Add your Pods here
 end
